[package]
name = "advent2019"
version = "0.1.0"
authors = ["Justin Kur <Justink97@hotmail.com>"]
edition = "2018"

[lib]
name = "advent"
path = "src/lib.rs"

[[bin]]
name = "advent2019"
path = "src/main.rs"

[dependencies]
permutohedron = "0.2.4"
num-rational = "0.2"
num-integer = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "advent_bench"
harness = false

